# encyc-core

./: .coverage  .coveragerc  .gitignore  COPYRIGHT  INSTALL  Makefile  README.rst  mappings.json  mypy.ini  pyproject.toml  requirements.txt  setup.py  setup.sh
conf/: core.cfg
encyc/: __init__.py  citations.py  cli.py  config.py  csvfile.py  ddr.py  docstore.py  encyclopedia.py  fileio.py  http.py  mediawiki.py  operations.py  publish.py  repo_models.py  rsync.py  search.py  sources.py  tests.py  urls.py  wiki.py  wikipage.py
encyc/models/: __init__.py  citations.py  elastic.py  helpers.py  legacy.py  sources.py  wikipage.py
encyc/tests/: __init__.py  test_citations.py  test_models_helpers.py  test_models_legacy.py  test_models_wikipage.py  test_wiki.py
requirements/: _base.txt  dev.txt
