[project]
name = "encyc-core"
description = "encyc-core"
authors = [
    {name = "Geoffrey Jost", email = "geoffrey.jost@densho.us"}
]
maintainers = [
    {name = "Geoffrey Jost", email="geoffrey.jost@densho.us"},
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Django", "encyclopedia"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dynamic = ["version"]  # see tool.setuptools.dynamic
requires-python = ">=3.11"
dependencies = [
    "click",
    "beautifulsoup4",
    "deepdiff",
    "elasticsearch",
    "mwclient==0.10.1",
    "python-dateutil",
    "redis",
    "requests",
    "unicodecsv",
    "walrus",
    "bpython",
    "coverage",
    "mypy",
    "pytest",
    "pytest-cov",
#    #pytest-testmon",
    "pytest-xdist",
    "elastictools @ git+https://github.com/denshoproject/densho-elastictools",
]

[project.optional-dependencies]
testing = []

[tool.setuptools]
packages = ['encyc', 'encyc.models']

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.scripts]
encyc = "encyc.cli:encyc"

[project.urls]
Repository = "https://github.com/denshoproject/encyc-core"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
